// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`page/Home/AuditPlanRiskList render normal table 1`] = `
<body>
  <div>
    <div
      class="css-eydntv"
    >
      <div
        class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
      >
        <div
          class="ant-space-item"
        >
          <header
            class="css-1twz2l2"
          >
            <svg
              class="custom-icon"
              height="20"
              viewBox="0 0 20 20"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m3.548 4.726 1.78 1.78a5.833 5.833 0 1 0 1.179-1.179l-1.78-1.78a8.333 8.333 0 1 1-1.179 1.179m2.976 2.976L10 11.178 11.178 10 7.703 6.524a4.167 4.167 0 1 1-1.179 1.179"
                fill="#15C7D4"
              />
            </svg>
            待处理扫描任务
          </header>
        </div>
      </div>
      <div
        class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
      >
        <div
          class="ant-space-item"
          style="margin-right: 8px;"
        >
          <span
            class="table-limit-tips-text"
          >
            当前表格仅展示前5条数据
          </span>
        </div>
        <div
          class="ant-space-item"
        >
          <button
            class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default ant-btn-sm ant-btn-icon-only btn-icon-no-border basic-button-wrapper css-geipcv"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svg
                class="custom-icon custom-icon-refresh"
                height="14"
                viewBox="0 0 14 14"
                width="14"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M3.187 2.586a5.833 5.833 0 0 1 8.59 7.762L9.918 7h1.75a4.667 4.667 0 0 0-7.899-3.367zm7.626 8.828a5.833 5.833 0 0 1-8.59-7.762L4.083 7h-1.75a4.667 4.667 0 0 0 7.899 3.367z"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="ant-table-wrapper actiontech-table-namespace css-fxd6ka css-dev-only-do-not-override-bj9uhl"
    >
      <div
        class="ant-spin-nested-loading css-dev-only-do-not-override-bj9uhl"
      >
        <div
          class="ant-spin-container"
        >
          <div
            class="ant-table ant-table-scroll-horizontal"
          >
            <div
              class="ant-table-container"
            >
              <div
                class="ant-table-content"
                style="overflow-x: auto; overflow-y: hidden;"
              >
                <table
                  style="min-width: 100%; table-layout: auto;"
                >
                  <colgroup>
                    <col />
                    <col
                      style="width: 20%;"
                    />
                    <col
                      style="width: 10%;"
                    />
                  </colgroup>
                  <thead
                    class="ant-table-thead"
                  >
                    <tr>
                      <th
                        class="ant-table-cell"
                        scope="col"
                      >
                        扫描任务报告
                      </th>
                      <th
                        class="ant-table-cell"
                        scope="col"
                      >
                        来源
                      </th>
                      <th
                        class="ant-table-cell"
                        scope="col"
                      >
                        风险SQL
                      </th>
                      <th
                        class="ant-table-cell"
                        scope="col"
                      >
                        时间
                      </th>
                    </tr>
                  </thead>
                  <tbody
                    class="ant-table-tbody"
                  >
                    <tr
                      aria-hidden="true"
                      class="ant-table-measure-row"
                      style="height: 0px; font-size: 0px;"
                    >
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="1739836656367702018"
                    >
                      <td
                        class="ant-table-cell"
                      >
                        <div
                          class="css-10kos8e"
                        >
                          <svg
                            height="16"
                            viewBox="0 0 16 16"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M14 6v7.995a.666.666 0 0 1-.662.672H2.662A.66.66 0 0 1 2 14.005V1.995c0-.358.298-.662.665-.662h6.668v4A.667.667 0 0 0 10 6zm0-1.333h-3.333V1.335zm-8.667 0V6h2V4.667zm0 2.666v1.334h5.334V7.333zm0 2.667v1.333h5.334V10z"
                              fill="#C3C6CD"
                            />
                          </svg>
                          <a
                            data-testid="report-time"
                            href="/sqle/project/700300/audit-plan/detail/test-risk/report/1739836656367702018"
                          >
                            生成时间 2023-12-27 12:32:38
                          </a>
                        </div>
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        <a
                          href="/sqle/project/700300/audit-plan/detail/test-risk"
                        >
                          test-risk
                        </a>
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        <span
                          class="ant-typography css-dev-only-do-not-override-bj9uhl"
                        >
                          <strong>
                            3
                          </strong>
                        </span>
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        2023-12-27 12:32:38
                      </td>
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="1739836656367702020"
                    >
                      <td
                        class="ant-table-cell"
                      >
                        <div
                          class="css-10kos8e"
                        >
                          <svg
                            height="16"
                            viewBox="0 0 16 16"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M14 6v7.995a.666.666 0 0 1-.662.672H2.662A.66.66 0 0 1 2 14.005V1.995c0-.358.298-.662.665-.662h6.668v4A.667.667 0 0 0 10 6zm0-1.333h-3.333V1.335zm-8.667 0V6h2V4.667zm0 2.666v1.334h5.334V7.333zm0 2.667v1.333h5.334V10z"
                              fill="#C3C6CD"
                            />
                          </svg>
                          <a
                            data-testid="report-time"
                            href="/sqle/project/700300/audit-plan/detail//report/1739836656367702020"
                          >
                            生成时间 -
                          </a>
                        </div>
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        -
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        <span
                          class="ant-typography css-dev-only-do-not-override-bj9uhl"
                        >
                          <strong>
                            1
                          </strong>
                        </span>
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        -
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`page/Home/AuditPlanRiskList render table with return error 1`] = `
<body>
  <div>
    <div
      class="css-eydntv"
    >
      <div
        class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
      >
        <div
          class="ant-space-item"
        >
          <header
            class="css-1twz2l2"
          >
            <svg
              class="custom-icon"
              height="20"
              viewBox="0 0 20 20"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m3.548 4.726 1.78 1.78a5.833 5.833 0 1 0 1.179-1.179l-1.78-1.78a8.333 8.333 0 1 1-1.179 1.179m2.976 2.976L10 11.178 11.178 10 7.703 6.524a4.167 4.167 0 1 1-1.179 1.179"
                fill="#15C7D4"
              />
            </svg>
            待处理扫描任务
          </header>
        </div>
      </div>
      <div
        class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
      >
        <div
          class="ant-space-item"
          style="margin-right: 8px;"
        >
          <span
            class="table-limit-tips-text"
          >
            当前表格仅展示前5条数据
          </span>
        </div>
        <div
          class="ant-space-item"
        >
          <button
            class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default ant-btn-sm ant-btn-icon-only btn-icon-no-border basic-button-wrapper css-geipcv"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svg
                class="custom-icon custom-icon-refresh"
                height="14"
                viewBox="0 0 14 14"
                width="14"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M3.187 2.586a5.833 5.833 0 0 1 8.59 7.762L9.918 7h1.75a4.667 4.667 0 0 0-7.899-3.367zm7.626 8.828a5.833 5.833 0 0 1-8.59-7.762L4.083 7h-1.75a4.667 4.667 0 0 0 7.899 3.367z"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="ant-table-wrapper actiontech-table-namespace css-fxd6ka css-dev-only-do-not-override-bj9uhl"
    >
      <div
        class="ant-spin-nested-loading css-dev-only-do-not-override-bj9uhl"
      >
        <div
          class="ant-spin-container"
        >
          <div
            class="ant-table ant-table-empty ant-table-scroll-horizontal"
          >
            <div
              class="ant-table-container"
            >
              <div
                class="ant-table-content"
                style="overflow-x: auto; overflow-y: hidden;"
              >
                <table
                  style="min-width: 100%; table-layout: auto;"
                >
                  <colgroup>
                    <col />
                    <col
                      style="width: 20%;"
                    />
                    <col
                      style="width: 10%;"
                    />
                  </colgroup>
                  <thead
                    class="ant-table-thead"
                  >
                    <tr>
                      <th
                        class="ant-table-cell"
                        scope="col"
                      >
                        扫描任务报告
                      </th>
                      <th
                        class="ant-table-cell"
                        scope="col"
                      >
                        来源
                      </th>
                      <th
                        class="ant-table-cell"
                        scope="col"
                      >
                        风险SQL
                      </th>
                      <th
                        class="ant-table-cell"
                        scope="col"
                      >
                        时间
                      </th>
                    </tr>
                  </thead>
                  <tbody
                    class="ant-table-tbody"
                  >
                    <tr
                      aria-hidden="true"
                      class="ant-table-measure-row"
                      style="height: 0px; font-size: 0px;"
                    >
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                    </tr>
                    <tr
                      class="ant-table-placeholder"
                    >
                      <td
                        class="ant-table-cell"
                        colspan="4"
                      >
                        <div
                          class="ant-table-expanded-row-fixed"
                          style="width: 0px; position: sticky; left: 0px; overflow: hidden;"
                        />
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
